--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "bootstrap": "4.3.1",
-    "jquery": "3.4.1",
+    "component": "^1.1.0",
     "core-js": "^2.5.4",
+    "jquery": "3.4.1",
     "ngx-bootstrap": "^4.3.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
